header html y css, agregado de iconos y fuentes

--- a/src/app/paginas/shared/header/header.component.html
+++ b/src/app/paginas/shared/header/header.component.html
@@ -1,1 +1,15 @@
-<p>header works!</p>
+<header>
+        <div id="logo">
+            <a href=""><img src="../../../../assets/logo/SpaceX_Logo_Black.png" alt="Logo Space X"></a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href=""><i class="fa-solid fa-helicopter-symbol" style="color: #ffffff;"></i> pistas</a></li>
+                <li><a href=""><i class="fa-solid fa-shuttle-space fa-rotate-270" style="color: #ffffff;"></i> eventos historicos</a></li>
+                <li><a href=""><i class="fa-solid fa-satellite-dish" style="color: #ffffff;"></i> informacion tecnica</a></li>
+            </ul>
+        </nav>
+        <div id="loggeo">
+            <a href=""><i class="fa-solid fa-user-astronaut" style="color: #ffffff;"></i> ingresar</a>
+        </div>
+</header>
