--- a/src/app/paginas/home/home.component.html
+++ b/src/app/paginas/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class="container">
+    <div class="carrousel">CARROUSEL</div>
+    <div class="company">
+        <h1>Que es SpaceX</h1>
+    </div>
+    
+</div>
