--- a/src/app/paginas/home/home.component.html
+++ b/src/app/paginas/home/home.component.html
@@ -2,6 +2,7 @@
     <div class="carrousel">CARROUSEL</div>
     <div class="company">
         <h1>Que es SpaceX</h1>
+        {{ company.name }}
     </div>
-    
+
 </div>
