--- a/src/app/paginas/shared/header/header.component.html
+++ b/src/app/paginas/shared/header/header.component.html
@@ -10,6 +10,6 @@
             </ul>
         </nav>
         <div id="loggeo">
-            <a href=""><i class="fa-solid fa-user-astronaut" style="color: #ffffff;"></i> ingresar</a>
+            <a href="/login"><i class="fa-solid fa-user-astronaut" style="color: #ffffff;"></i> ingresar</a>
         </div>
 </header>
