--- a/src/app/paginas/home/home.component.css
+++ b/src/app/paginas/home/home.component.css
@@ -1,17 +1,80 @@
 .carrousel {
-    width: 90%;
+    width: 80%;
     height: 20rem;
     text-align: center;
+    background-color: red;
 }
-.container {
+.container-principal {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    padding: 2rem;
 }
 
 .company {
     width: 90%;
     text-align: center;
-    background-color: blue;
+    background-color: rgb(64, 64, 64);
     border-radius: 1rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    box-shadow: 4px 3px 5px rgb(70, 69, 69);
 }
+.descripcion{
+    color: white;
+    font-family: 'Comfortaa', sans-serif;
+}
+
+.container {
+    display: flex;
+    width: 60%;
+  }
+  
+  .left-column, .right-column {
+    width: 50%;
+    overflow: hidden;
+    height: 20rem;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  img{
+    height: 100%;
+    background-size: cover;
+  background-position: center;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    transition: transform 0.6s;
+}
+
+img:hover {
+    transform: scale(1.1);
+}
+  .left-column {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
+  .right-column li{
+    font-family: 'Courier New', Courier, monospace;
+  }
+  
+  .right-column {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: #e1e1e1;
+    padding-right: 10px;
+    cursor:default;
+  }
+  @media (max-width: 1200px) {
+    .left-column{
+        display: none;
+    }
+    .container{
+        width: 100%;
+    }
+    .right-column{
+        border-radius: 10px;
+        width: 100%;
+    }
+  }
