--- a/src/app/paginas/home/home.component.html
+++ b/src/app/paginas/home/home.component.html
@@ -1,8 +1,28 @@
-<div class="container">
+<div class="container-principal">
     <div class="carrousel">CARROUSEL</div>
     <div class="company">
-        <h1>Que es SpaceX</h1>
-        {{ company.name }}
+        <h1 class="descripcion">que es spacex?</h1>
     </div>
+    <div class="container">
+        <div class="left-column">
+            <img src="../../../assets/img/spacex-home.jpg" alt="SpaceX">
+        </div>
+        <div class="right-column">
+            <ul>
+                <li>{{ translatedText }}</li>
+                <li>Fundador: {{ company.founder }}</li>
+                <li>Fundado en: {{ company.founded }}</li>
+                <li>Empleados: {{ company.employees }}</li>
+                <li>Plataformas de lanzamiento: {{ company.launch_sites }}</li>
+                <li>CEO: {{ company.ceo }}</li>
+                <li>CTO: {{ company.cto }}</li>
+                <li>COO: {{ company.coo }}</li>
+                <li>Valuada en: {{ company.valuation | currency:'USD':'symbol':'1.2-2' }}</li>
+            </ul>
+        </div>
+    </div>
+    
+
+    
 
 </div>
