--- a/src/app/paginas/shared/header/header.component.html
+++ b/src/app/paginas/shared/header/header.component.html
@@ -4,7 +4,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href=""><i class="fa-solid fa-helicopter-symbol" style="color: #ffffff;"></i> pistas</a></li>
+                <li><a href="/pistas"><i class="fa-solid fa-helicopter-symbol" style="color: #ffffff;"></i> pistas</a></li>
                 <li><a href=""><i class="fa-solid fa-shuttle-space fa-rotate-270" style="color: #ffffff;"></i> eventos historicos</a></li>
                 <li><a href=""><i class="fa-solid fa-satellite-dish" style="color: #ffffff;"></i> informacion tecnica</a></li>
             </ul>
