--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,5 @@
 .container{
     padding-left: 7rem;
     padding-right: 7rem;
-    background-image: url(../assets/img/fondo.jpg);
-    background-size: cover;
+    background-image: url(../assets/img/fondo2.jpg);
 }
