--- a/src/app/cards/pista/pista.component.html
+++ b/src/app/cards/pista/pista.component.html
@@ -15,6 +15,6 @@
     <h3>{{ pista.name }}</h3>
   </div>
   <div class="informacion">
-    <p>Localidad {{ pista.locality }}</p>
+    <p><i class="fa-solid fa-location-dot" style="color: #000000;"></i> {{ pista.locality }}</p>
   </div>
 </div>
