--- a/src/app/paginas/home/home.component.html
+++ b/src/app/paginas/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container-principal">
     <div class="carrousel">CARROUSEL</div>
     <div class="company">
-        <h1 class="descripcion">que es spacex?</h1>
+        <h1 class="descripcion"><i class="fa-solid fa-satellite fa-rotate-270" style="color: #ffffff;"></i> Que es spacex? <i class="fa-solid fa-satellite" style="color: #ffffff;"></i></h1>
     </div>
     <div class="container">
         <div class="left-column">
