--- a/src/app/paginas/home/home.component.css
+++ b/src/app/paginas/home/home.component.css
@@ -22,7 +22,7 @@
 }
 .descripcion{
     color: white;
-    font-family: 'Comfortaa', sans-serif;
+    font-family: 'Orbitron', sans-serif;
 }
 
 .container {
