--- a/src/app/paginas/shared/header/header.component.html
+++ b/src/app/paginas/shared/header/header.component.html
@@ -4,9 +4,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/pistas"><i class="fa-solid fa-helicopter-symbol" style="color: #ffffff;"></i> pistas</a></li>
-                <li><a href=""><i class="fa-solid fa-shuttle-space fa-rotate-270" style="color: #ffffff;"></i> eventos historicos</a></li>
-                <li><a href=""><i class="fa-solid fa-satellite-dish" style="color: #ffffff;"></i> informacion tecnica</a></li>
+                <li><a href="/pistas"><i class="fa-solid fa-helicopter-symbol" style="color: #ffffff;"></i><span class="texto-nav"> pistas</span></a></li>
+                <li><a href=""><i class="fa-solid fa-shuttle-space fa-rotate-270" style="color: #ffffff;"></i><span class="texto-nav"> eventos historicos</span></a></li>
+                <li><a href=""><i class="fa-solid fa-satellite-dish" style="color: #ffffff;"></i><span class="texto-nav"> informacion tecnica</span></a></li>
             </ul>
         </nav>
         <div id="loggeo">
