--- a/src/app/cards/pista/pista.component.css
+++ b/src/app/cards/pista/pista.component.css
@@ -1,34 +1,34 @@
-.cardPista{
-width: 300px;
-height: 250px;
-margin: 1rem;
-border: 2px solid black;
-border-radius: 10px;
-overflow: hidden;
-transition: 1s;
-box-shadow: 2px 2px 5px #000000;
-background-color: rgba(240, 237, 237, 0.873);
+.cardPista {
+    width: 300px;
+    height: 260px;
+    margin: 1rem;
+    border: 2px solid black;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: 1s;
+    box-shadow: 2px 2px 5px #000000;
+    background-color: rgba(240, 237, 237, 0.873);
 }
 
-.imgPista img{
+.imgPista img {
     width: 100%;
     height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 3px solid black;
+    border-bottom: 3px solid black;
 }
 
-.cardPista{
+.cardPista {
     text-align: center;
 }
 
-.cardPista:hover{
+.cardPista:hover {
     height: 18rem;
     padding-bottom: 1rem;
 }
 
-.status{
+.status {
     position: absolute;
     margin-top: 1rem;
     padding: 0.2rem;
@@ -39,19 +39,19 @@ background-color: rgba(240, 237, 237, 0.873);
     box-shadow: 2px 2px 5px #282828;
 }
 
-.active{
+.active {
     background-color: rgba(0, 128, 0, 0.845);
 }
 
-.retired{
+.retired {
     background-color: rgba(175, 0, 0, 0.886);
 }
 
-.contruccion{
+.contruccion {
     background-color: rgba(215, 215, 0, 0.834);
 }
 
-.informacion{
+.informacion {
     padding-left: 1rem;
     padding-right: 1rem;
 }
