--- a/src/app/paginas/pistas/pistas.component.css
+++ b/src/app/paginas/pistas/pistas.component.css
@@ -1,11 +1,17 @@
 .container{
     max-width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
-    padding-left: 10rem;
-    padding-right: 10rem;
     font-family: 'Comfortaa', sans-serif;
+    margin-left: 15rem;
+    margin-right: 15rem;
+    
+}
+.background{
+    background-color: rgba(27, 27, 27, 0.719);
+    position: relative;
+    padding-top: 100px;
 }
 
 h2{
@@ -15,4 +21,11 @@ h2{
     color: azure;
     padding: 2rem;
     font-family: 'Orbitron', sans-serif;
+}
+
+
+@media (max-width: 1334px) {
+    .barras {
+        display: none;
+    }
 }
