cambios visuales y compoennte vista detallada

--- a/src/app/cards/pista/pista.component.html
+++ b/src/app/cards/pista/pista.component.html
@@ -1,3 +1,4 @@
+<a href="/pista/{{pista.id}}">
 <div class="cardPista">
   <div class="status retired" *ngIf="pista.status === 'retired'">
     <span>Retirada</span>
@@ -18,3 +19,4 @@
     <p><i class="fa-solid fa-location-dot" style="color: #000000;"></i> {{ pista.locality }}</p>
   </div>
 </div>
+</a>
