--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,9 @@
     padding-right: 7rem;
     background-image: url(../assets/img/fondo2.jpg);
 }
+@media (max-width: 845px) {
+    .container{
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+}
