--- a/src/app/cards/pista/pista.component.css
+++ b/src/app/cards/pista/pista.component.css
@@ -55,3 +55,13 @@
     padding-left: 1rem;
     padding-right: 1rem;
 }
+a{
+    text-decoration: none;
+    color: black;
+}
+
+@media (max-width: 845px) {
+    .cardPista {
+        height: 300px;
+    }
+}
