--- a/src/app/paginas/home/home.component.html
+++ b/src/app/paginas/home/home.component.html
@@ -1,28 +1,27 @@
-<div class="container-principal">
-    <div class="carrousel">CARROUSEL</div>
-    <div class="company">
-        <h1 class="descripcion"><i class="fa-solid fa-satellite fa-rotate-270" style="color: #ffffff;"></i> Que es spacex? <i class="fa-solid fa-satellite" style="color: #ffffff;"></i></h1>
-    </div>
-    <div class="container">
-        <div class="left-column">
-            <img src="../../../assets/img/spacex-home.jpg" alt="SpaceX">
+<app-loading *ngIf="loading; else elseBlock"></app-loading>
+<ng-template #elseBlock>
+    <div class="container-principal">
+        <div class="carrousel">CARROUSEL</div>
+        <div class="company">
+            <h1 class="descripcion"><i class="fa-solid fa-satellite fa-rotate-270" style="color: #ffffff;"></i> Que es spacex? <i class="fa-solid fa-satellite" style="color: #ffffff;"></i></h1>
         </div>
-        <div class="right-column">
-            <ul>
-                <li>{{ translatedText }}</li>
-                <li>Fundador: {{ company.founder }}</li>
-                <li>Fundado en: {{ company.founded }}</li>
-                <li>Empleados: {{ company.employees }}</li>
-                <li>Plataformas de lanzamiento: {{ company.launch_sites }}</li>
-                <li>CEO: {{ company.ceo }}</li>
-                <li>CTO: {{ company.cto }}</li>
-                <li>COO: {{ company.coo }}</li>
-                <li>Valuada en: {{ company.valuation | currency:'USD':'symbol':'1.2-2' }}</li>
-            </ul>
+        <div class="container">
+            <div class="left-column">
+                <img src="../../../assets/img/spacex-home.jpg" alt="SpaceX">
+            </div>
+            <div class="right-column">
+                <ul>
+                    <li>{{ translatedText }}</li>
+                    <li>Fundador: {{ company.founder }}</li>
+                    <li>Fundado en: {{ company.founded }}</li>
+                    <li>Empleados: {{ company.employees }}</li>
+                    <li>Plataformas de lanzamiento: {{ company.launch_sites }}</li>
+                    <li>CEO: {{ company.ceo }}</li>
+                    <li>CTO: {{ company.cto }}</li>
+                    <li>COO: {{ company.coo }}</li>
+                    <li>Valuada en: {{ company.valuation | currency:'USD':'symbol':'1.2-2' }}</li>
+                </ul>
+            </div>
         </div>
     </div>
-    
-
-    
-
-</div>
+</ng-template>
