--- a/src/app/paginas/pistas/pistas.component.html
+++ b/src/app/paginas/pistas/pistas.component.html
@@ -1,15 +1,20 @@
-<div class="background">
-<h2> <span class="barras">- - - -</span> Pistas de lanzamientos <span class="barras">- - - - </span><i class="fa-solid fa-shuttle-space" style="color: #ffffff;"></i></h2>
-<div class="container">
-    <div *ngFor="let pista of launchpads">
-        <app-pista [pista]="pista"></app-pista>
+<app-loading *ngIf="loading; else elseBlock"></app-loading>
+<ng-template #elseBlock>
+    <div class="background">
+        <h2> <span class="barras">- - - -</span> Pistas de lanzamientos <span class="barras">- - - - </span><i
+                class="fa-solid fa-shuttle-space" style="color: #ffffff;"></i></h2>
+        <div class="container">
+            <div *ngFor="let pista of launchpads">
+                <app-pista [pista]="pista"></app-pista>
+            </div>
+        </div>
+        <h2><i class="fa-solid fa-shuttle-space fa-rotate-180" style="color: #ffffff;"></i><span class="barras"> - - -
+                -</span> Pistas de aterrizaje <span class="barras"> - - - -
+                - - </span></h2>
+        <div class="container">
+            <div *ngFor="let pista of landpads">
+                <app-pista [pista]="pista"></app-pista>
+            </div>
+        </div>
     </div>
-</div>
-<h2><i class="fa-solid fa-shuttle-space fa-rotate-180" style="color: #ffffff;"></i><span class="barras"> - - - -</span> Pistas de aterrizaje <span class="barras"> - - - -
-    - - </span></h2>
-<div class="container">
-    <div *ngFor="let pista of landpads">
-        <app-pista [pista]="pista"></app-pista>
-    </div>
-</div>
-</div>
+</ng-template>
