--- a/src/app/paginas/shared/footer/footer.component.html
+++ b/src/app/paginas/shared/footer/footer.component.html
@@ -7,7 +7,7 @@
             <li><a href="https://www.twitter.com/spacex" target="_blank"><i class="fa-brands fa-twitter" style="color: #ffffff;" title="twitter"></i></a></li>
             <li><a href="https://www.instagram.com/spacex" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff;" title="instagram"></i></a></li>
             <li><a href="https://www.youtube.com/spacex" target="_blank"><i class="fa-brands fa-youtube" style="color: #ffffff;" title="youtube"></i></a></li>
-            <li><a href="https://www.google.com" target="_blank"><i class="fa-solid fa-satellite-dish" style="color: #ffffff;" title="contacto"></i></a></li>
+            <li><a href="/formulario-contacto"><i class="fa-solid fa-satellite-dish" style="color: #ffffff;" title="contacto"></i></a></li>
         </ul>
     </div>
 </div>
