--- a/src/app/paginas/detalle-pista/detalle-pista.component.css
+++ b/src/app/paginas/detalle-pista/detalle-pista.component.css
@@ -1,3 +1,31 @@
-.container{
+.background{
+    background-color: rgba(27, 27, 27, 0.719);
+    position: relative;
     padding-top: 100px;
+}
+.container{
+    padding: 5rem;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+.container img {
+    height: 40rem;
+    border-radius: 10px;
+}
+h2{
+    text-align: center;
+    font-size: 3rem;
+    margin: 0px;
+    color: azure;
+    padding: 2rem;
+    font-family: 'Orbitron', sans-serif;
+}
+ul{
+    list-style: none;
+}
+li{
+    color: white;
+    margin: 1rem;
+    font-size: 1.5rem;
 }
