--- a/src/app/modales/login/login.component.html
+++ b/src/app/modales/login/login.component.html
@@ -1,1 +1,13 @@
-<p>login works!</p>
+<div class="container">
+    <h2>Login</h2>
+    <form action="">
+      Usuario
+      <input type="text" name="nombre" maxlength="100" />
+      Password
+      <input type="text" name="pass" maxlength="100" />
+      <div class="botones">
+        <input type="submit" value="Login" />
+        <input type="submit" value="Cancelar" />
+      </div>
+    </form>
+  </div>
