--- a/src/app/modales/registro/registro.component.html
+++ b/src/app/modales/registro/registro.component.html
@@ -1,1 +1,26 @@
-<p>registro works!</p>
+<div class="container">
+    <h2>Registro</h2>
+    <form action="">
+      Nombre
+      <input type="text" name="nombre" maxlength="100" />
+      Apellido
+      <input type="text" name="apellido" maxlength="100" />
+      Usuario
+      <input type="text" name="usuario" maxlength="100" />
+      Genero
+      <select name="genero">
+        <option value="1">Mujer</option>
+        <option value="2">Hombre</option>
+      </select>
+      Email
+      <input type="text" name="email" maxlength="100" />
+      Password
+      <input type="text" name="pass1" maxlength="100" />
+      Repite password
+      <input type="text" name="pass2" maxlength="100" />
+      <div class="botones">
+        <input type="submit" value="Confirmar" />
+        <input type="submit" value="Cancelar" />
+      </div>
+    </form>
+  </div>
