--- a/src/app/paginas/shared/header/header.component.html
+++ b/src/app/paginas/shared/header/header.component.html
@@ -6,7 +6,7 @@
             <ul>
                 <li><a href="/pistas"><i class="fa-solid fa-helicopter-symbol" style="color: #ffffff;"></i><span class="texto-nav"> pistas</span></a></li>
                 <li><a href=""><i class="fa-solid fa-shuttle-space fa-rotate-270" style="color: #ffffff;"></i><span class="texto-nav"> eventos historicos</span></a></li>
-                <li><a href=""><i class="fa-solid fa-satellite-dish" style="color: #ffffff;"></i><span class="texto-nav"> informacion tecnica</span></a></li>
+                <li><a href="/lanzamientos"><i class="fa-solid fa-satellite-dish" style="color: #ffffff;"></i><span class="texto-nav"> lanzamientos</span></a></li>
             </ul>
         </nav>
         <div id="loggeo">
