--- a/src/app/modales/login/login.component.html
+++ b/src/app/modales/login/login.component.html
@@ -1,10 +1,16 @@
 <div class="container">
-    <h2>Login</h2>
+    <h2 class="title">Iniciar sesion</h2>
     <form action="">
-      Usuario
-      <input type="text" name="nombre" maxlength="100" />
-      Password
-      <input type="text" name="pass" maxlength="100" />
+        <div>
+            Usuario
+            <input type="text" name="username" maxlength="100"/>
+        </div>
+        <div>
+            Contrasena
+            <input type="password" name="password" maxlength="100"/>
+        </div>
+      
+      
       <div class="botones">
         <input type="submit" value="Login" />
         <input type="submit" value="Cancelar" />
