--- a/src/app/paginas/shared/header/header.component.css
+++ b/src/app/paginas/shared/header/header.component.css
@@ -74,6 +74,7 @@ header ul li a {
     margin: 1rem;
     font-size: 1.5rem;
     font-family: 'Comfortaa', sans-serif;
+    cursor: pointer;
 }
 
 a {
