creados los lanzamientos y arreglo a detalles de eventos

--- a/src/app/cards/evento/evento.component.html
+++ b/src/app/cards/evento/evento.component.html
@@ -1,7 +1,8 @@
     <div class="cardEvento">
-      <div class="imgPista">
-        <!--<img src="{{ pista.images.large }}" alt="imagen pista" />-->
+      <div class="imgEvento">
+        <img src="{{event.imagen}}" alt="Imagen evento">
       </div>
+      <div class="texto">
       <div class="titulo">
         <h3>{{event.title }}</h3>
       </div>
@@ -13,5 +14,6 @@
       </div>
       <div class="link">
         <a href="{{event.links}}" target="_blank">Articulo de {{event.title }}</a>
+      </div>
       </div>
     </div>
