--- a/src/app/cards/evento/evento.component.css
+++ b/src/app/cards/evento/evento.component.css
@@ -1,18 +1,27 @@
-.cardEvento{
-    background-color: rgba(197, 197, 197, 0.854);
-    width: 600px;
+.cardEvento {
+  background-color: rgba(197, 197, 197, 0.854);
+  width: 600px;
+  border-radius: 20px;
+  margin: 1rem;
+  box-shadow: 2px 2px 5px #000000;
+  font-family: "Comfortaa", sans-serif;
+}
+
+h3 {
+  padding-bottom: 1.5rem;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(94, 94, 94);
+}
+
+.imgEvento img {
+  width: 100%;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+}
+
+.texto{
     padding: 1rem;
-border-radius: 20px;
-margin: 1rem;
-box-shadow: 2px 2px 5px #000000;
-font-family: 'Comfortaa', sans-serif;
-}
-
-h3{
-    padding-bottom: 1.5rem;
-}
-
-a{
-    text-decoration: none;
-    color: rgb(94, 94, 94);
 }
