--- a/src/app/paginas/eventos-historicos/eventos-historicos.component.css
+++ b/src/app/paginas/eventos-historicos/eventos-historicos.component.css
@@ -1,27 +1,26 @@
 .container {
-    max-width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    font-family: 'Comfortaa', sans-serif;
-    margin-left: 15rem;
-    margin-right: 15rem;
-    text-align: center;
+  max-width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  font-family: "Comfortaa", sans-serif;
+  margin-left: 10rem;
+  margin-right: 10rem;
+  text-align: center;
 }
 
-h2{
-    text-align: center;
-    font-size: 3rem;
-    margin: 0px;
-    color: azure;
-    padding: 2rem;
-    font-family: 'Orbitron', sans-serif;
+h2 {
+  text-align: center;
+  font-size: 3rem;
+  margin: 0px;
+  color: azure;
+  padding: 2rem;
+  font-family: "Orbitron", sans-serif;
 }
 
 .cardAuto {
   background-color: rgba(197, 197, 197, 0.854);
   width: 600px;
-  padding: 1rem;
   border-radius: 20px;
   margin: 1rem;
   box-shadow: 2px 2px 5px #000000;
@@ -43,5 +42,12 @@ a {
 .background {
   background-color: rgba(27, 27, 27, 0.719);
   position: relative;
-  padding-top: 100px;
+  padding-top: 50px;
+  margin-left: 10rem;
+  margin-right: 10rem;
+  padding-bottom: 5rem;
+}
+
+.texto{
+  padding: 1rem;
 }
