--- a/src/app/paginas/eventos-historicos/eventos-historicos.component.html
+++ b/src/app/paginas/eventos-historicos/eventos-historicos.component.html
@@ -8,31 +8,35 @@
       <h2>Eventos historicos</h2>
       <div class="container">
         <div class="cardAuto">
-        <div class="imgAuto">
-          <img [src]="auto.flickr_images[0]" alt="imagen pista" />
+          <div class="imgAuto">
+            <img [src]="auto.flickr_images[0]" alt="imagen pista" />
+          </div>
+          <div class="texto">
+          <div class="titulo">
+            <h3>{{ auto.name }}</h3>
+          </div>
+          <div class="fecha">
+            <p>{{ auto.event_date_unix }}</p>
+          </div>
+          <div class="informacion">
+            <p>{{ auto.details }}</p>
+          </div>
+          <div class="link">
+            <a href="{{ auto.video }}" target="_blank"
+              >video de {{ auto.name }}</a
+            >
+          </div>
+          <div class="link">
+            <a href="{{ auto.wiki }}" target="_blank"
+              >video de {{ auto.name }}</a
+            >
+          </div>
+          </div>
         </div>
-        <div class="titulo">
-          <h3>{{ auto.name }}</h3>
+        <div *ngFor="let evento of eventos">
+          <app-evento [event]="evento"></app-evento>
         </div>
-        <div class="fecha">
-          <p>{{ auto.event_date_unix }}</p>
-        </div>
-        <div class="informacion">
-          <p>{{ auto.details }}</p>
-        </div>
-        <div class="link">
-          <a href="{{ auto.video }}" target="_blank"
-            >video de {{ auto.name }}</a
-          >
-        </div>
-        <div class="link">
-          <a href="{{ auto.wiki }}" target="_blank">video de {{ auto.name }}</a>
-        </div>
-      </div>
-      <div *ngFor="let evento of eventos">
-        <app-evento [event]="evento"></app-evento>
       </div>
     </div>
   </div>
-</div>
 </ng-template>
