--- a/src/app/paginas/lanzamientos/lanzamientos.component.html
+++ b/src/app/paginas/lanzamientos/lanzamientos.component.html
@@ -1,1 +1,24 @@
-<p>lanzamientos works!</p>
+<app-loading *ngIf="loading; else elseBlock"></app-loading>
+<ng-template #elseBlock>
+  <div class="body">
+    <div class="sidebar" class="col-md-3">
+      <app-sidebar></app-sidebar>
+    </div>
+    <div class="background">
+      <h2>Lanzamientos</h2>
+      <div class="container">
+        <div class="carLanzamiento">
+          <div class="imgLanzamiento">
+            <!--<img [src]="auto.flickr_images[0]" alt="imagen pista" />-->
+          </div>
+          <div class="texto">
+
+          </div>
+        </div>
+        <div *ngFor="let lanzamiento of lanzamientos">
+          <app-lanzamiento [lanzamiento]="lanzamiento"></app-lanzamiento>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
