--- a/src/app/paginas/pistas/pistas.component.css
+++ b/src/app/paginas/pistas/pistas.component.css
@@ -1,52 +1,53 @@
-.container{
-    max-width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    font-family: 'Comfortaa', sans-serif;
-    margin-left: 15rem;
-    margin-right: 15rem;
-    
+.container {
+  max-width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  font-family: "Comfortaa", sans-serif;
+  margin-left: 15rem;
+  margin-right: 15rem;
 }
-.background{
-    background-color: rgba(27, 27, 27, 0.719);
-    position: relative;
-    padding-top: 100px;
-}
-
-h2{
-    text-align: center;
-    font-size: 3rem;
-    margin: 0px;
-    color: azure;
-    padding: 2rem;
-    font-family: 'Orbitron', sans-serif;
+.background {
+  background-color: rgba(27, 27, 27, 0.719);
+  position: relative;
+  padding-top: 50px;
+  margin-left: 10rem;
+  margin-right: 10rem;
+  padding-bottom: 5rem;
 }
 
+h2 {
+  text-align: center;
+  font-size: 3rem;
+  margin: 0px;
+  color: azure;
+  padding: 2rem;
+  font-family: "Orbitron", sans-serif;
+}
 
 @media (max-width: 1334px) {
-    .barras {
-        display: none;
-    }
+  .barras {
+    display: none;
+  }
 }
 
 @media (max-width: 845px) {
-    .barras {
-        display: none;
-    }
-    .container{
-        margin-left: 0;
-        margin-right: 0;
-    }
+  .barras {
+    display: none;
+  }
+  .container {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 app-sidebar {
-    width: 300px;
-    position: relative;
-    top: 300px;
-    background-color: white;
+  width: 300px;
+  position: relative;
+  top: 300px;
+  background-color: white;
 }
 
-body{
-    display: flex;
+body {
+  display: flex;
 }
