--- a/src/app/modales/login/login.component.css
+++ b/src/app/modales/login/login.component.css
@@ -2,10 +2,46 @@
     position: relative;
     transition: 0.25s;
     height: 30rem;
-    width: 20rem;
+    width: 30rem;
+    background-color: rgba(0, 0, 0, 0.74);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Orbitron', sans-serif;
 }
 .title{
     text-align: center;
-    
+    color: white;
+    font-size: 2rem;
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+}
+.input-login{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    color: white;
+    margin-top: 3rem;
+}
+.input-login input{
+    height: 2rem;
+    width: 20rem;
+    margin: 1rem;
+    border-radius: 5px;
+}
+.botones{
+    width: 80%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 4rem;
+}
+.botones button {
+    height: 2rem;
+    margin: 10px;
+    font-family: 'Orbitron', sans-serif;
+    color: black;
+    font-size: 1rem;
+    font-weight: bold;
 }
   
