--- a/src/app/paginas/formulario-contacto/formulario-contacto.component.css
+++ b/src/app/paginas/formulario-contacto/formulario-contacto.component.css
@@ -24,6 +24,7 @@ input, select{
     margin-left: 40rem;
     margin-right: 40rem;
     background-color: rgba(169, 169, 169, 0.729);
+    cursor: pointer;
 }
 
 select{
@@ -53,6 +54,7 @@ font-family: 'Orbitron', sans-serif;
 }
 
 .botones input{
+    cursor: pointer;
     margin: 1rem;
     font-size: 1.5rem;
     background-color: rgba(53, 53, 53, 0.841);
