--- a/src/app/imageSlider/components/imageSlider/imageSlider.component.html
+++ b/src/app/imageSlider/components/imageSlider/imageSlider.component.html
@@ -1,7 +1,7 @@
 <div class="slider">
   <div>
-    <div (click)="goToPrevious()" class="leftArrow">❰</div>
-    <div (click)="goToNext()" class="rightArrow">❱</div>
+    <div (click)="goToPrevious()" class="leftArrow"><i class="fa-brands fa-space-awesome fa-rotate-270" style="color: white;"></i></div>
+    <div (click)="goToNext()" class="rightArrow"><i class="fa-brands fa-space-awesome fa-rotate-90" style="color: white;"></i></div>
   </div>
   <div
     class="slide"
