--- a/src/app/cards/lanzamiento/lanzamiento.component.html
+++ b/src/app/cards/lanzamiento/lanzamiento.component.html
@@ -1,4 +1,4 @@
-<a href="/lanzamientos/{{ lanzamiento.id }}">
+<a href="/lanzamiento/{{ lanzamiento.id }}">
   <div class="cardLanzamiento">
     <div class="imgLanzamiento">
       <img src="{{ lanzamiento.links.patch.small }}" alt="imagen lanzamiento" />
