--- a/src/app/modales/login/login.component.html
+++ b/src/app/modales/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="input-login">
       usuario
       <input type="text" name="username" maxlength="100" />
-      contrasena
+      contraseña
       <input type="password" name="password" maxlength="100" />
     </div>
 
