json server aplicado, boton volver e imagen dialog

--- a/src/app/paginas/detalle-pista/detalle-pista.component.css
+++ b/src/app/paginas/detalle-pista/detalle-pista.component.css
@@ -29,3 +29,11 @@ li{
     margin: 1rem;
     font-size: 1.5rem;
 }
+
+.goBack{
+    position: absolute;
+    cursor: pointer;
+    color: white;
+    top: 150px;
+    left: 300px;
+}
