--- a/src/app/imageSlider/components/imageSlider/imageSlider.component.css
+++ b/src/app/imageSlider/components/imageSlider/imageSlider.component.css
@@ -1,9 +1,10 @@
 .slide {
-  width: 100%;
+  width: 60%;
   height: 100%;
   border-radius: 10px;
   background-size: cover;
   background-position: center;
+  transition: background-image 0.5s ease-in-out;
 }
 
 .rightArrow {
@@ -38,6 +39,9 @@
 .slider {
   position: relative;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .dotsContainer {
