--- a/src/app/modales/login/login.component.html
+++ b/src/app/modales/login/login.component.html
@@ -9,5 +9,6 @@
   <div class="botones">
     <button type="submit" value="Login">Login</button>
   </div>
+  <span> {{ mensajeError }}</span>
 </form>
 
