--- a/src/app/modales/login/login.component.css
+++ b/src/app/modales/login/login.component.css
@@ -1,6 +1,5 @@
 .container {
     position: relative;
-    transition: 0.25s;
     height: 30rem;
     width: 30rem;
     background-color: rgba(0, 0, 0, 0.74);
@@ -34,7 +33,7 @@
     width: 80%;
     display: flex;
     justify-content: space-evenly;
-    margin-top: 4rem;
+    bottom: 0;
 }
 .botones button {
     height: 2rem;
@@ -44,5 +43,8 @@
     font-size: 1rem;
     font-weight: bold;
     cursor: pointer;
+}
+span {
+    color: red;
 }
   
