--- a/src/app/paginas/lanzamientos/lanzamientos.component.css
+++ b/src/app/paginas/lanzamientos/lanzamientos.component.css
@@ -27,3 +27,10 @@
   .card{
     margin: 1rem;
   }
+  .header-container {
+    padding: 2rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  
