--- a/src/app/paginas/detalle-lanzamiento/detalle-lanzamiento.component.html
+++ b/src/app/paginas/detalle-lanzamiento/detalle-lanzamiento.component.html
@@ -9,10 +9,10 @@
         <h2>Lanzamiento {{ lanzamiento.name }}</h2>
         <div class="sector1">
           <div class="chip">
-            <div class="cores">
+            <div class="imgdiv">
               <img
                 src="../../../assets/img/cores.png"
-                class="img"
+                class="imgDentroChip"
                 alt="cores"
               />
             </div>
@@ -27,10 +27,13 @@
         </div>
         <div class="sector3">
           <div class="chip">
-            <img
-              src="../../../assets/img/payloadsGeneral2.jpg"
-              alt="payloads"
-            />
+            <div class="imgdiv">
+              <img
+                src="../../../assets/img/payloadsGeneral2.jpg"
+                alt="payloads"
+                class="imgDentroChip"
+              />
+            </div>
           </div>
           <div class="contenedorCable">
             <img
@@ -40,11 +43,13 @@
             />
           </div>
           <div class="chip">
-            <img
-              src="{{ lanzamiento.links.flickr.original[0] }}"
-              class="img"
-              alt="lanzamiento"
-            />
+            <div class="imgdiv">
+              <img
+                src="{{ lanzamiento.links.flickr.original[0] }}"
+                class="imgDentroChip"
+                alt="lanzamiento"
+              />
+            </div>
           </div>
           <div class="contenedorCable">
             <img
@@ -54,8 +59,12 @@
             />
           </div>
           <div class="chip">
-            <div class="imgDentroChip">
-              <a href="">Capsulas</a>
+            <div class="imgdiv">
+              <img
+                src="../../../assets/img/capsula.jpg"
+                alt=""
+                class="imgDentroChip"
+              />
             </div>
           </div>
         </div>
@@ -68,7 +77,13 @@
         </div>
         <div class="sector5">
           <div class="chip">
-            <img src="../../../assets/img/ships.jpeg" class="img" alt="ships" />
+            <div class="imgdiv">
+              <img
+                src="../../../assets/img/ships.jpeg"
+                class="imgDentroChip"
+                alt="ships"
+              />
+            </div>
           </div>
           <div class="contenedorCable">
             <img
@@ -85,7 +100,13 @@
             />
           </div>
           <div class="chip">
-            <img src="../../../assets/img/crew.jpg" class="img" alt="crew" />
+            <div class="imgdiv">
+              <img
+                src="../../../assets/img/crew.jpg"
+                class="imgDentroChip"
+                alt="crew"
+              />
+            </div>
           </div>
         </div>
       </div>
